spacing resolved

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -70,7 +70,7 @@ code {
 
 .display {
   width: 15.125em;
-  height: 14.687em;
+  height: 15.687em;
   background-color: var(--clr-pastel);
   margin-top: 1em;
   margin-bottom: 0.5em;
